# Wayland-2-Gnome

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PLAN_PHASE4.md  README.md
release/: README.md  build.sh  draft-gh-release.sh
release/pkg/arch/: PKGBUILD
release/pkg/deb/wayland-2-gnome/DEBIAN/: control
release/pkg/rpm/: wayland-2-gnome.spec
src/: lib.rs  main.rs
src/proxy/: mod.rs  mod_3b_backup.rs
tests/: integration_test.rs
